@@ -3,6 +3,8 @@ eglibc (2.9-27+multiarch) UNRELEASED; urgency=low
   * Use the multiarch path for the native version and optimized flavors.
   * Simplify the creation of /etc/ld.so.conf.d/<triplet>.conf.
   * Install a symlink ABI -> multiarch path.
+  * patches/any/local-ld-multiarch.diff: add the multiarch compat dir
+    instead of the multiarch dir.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Sep 2009 23:10:09 +0200
 
